section header complete

--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
       <div class="box-1-circle">
         <i class="fa-solid fa-circle"></i>
       </div>
+
+      <div class="box-2">
+        <div class="box-2-content">
+          <div class="box-icon">
+            <i class="fa-solid fa-lightbulb"></i>
+          </div>
+          <div class="box-p">
+            Inovation ideas,
+            <span class="text-primary-i">stylish design</span> for home &
+            business
+          </div>
+        </div>
+      </div>
+      <div class="box-2-vr-line"></div>
+      <div class="box-2-circle">
+        <i class="fa-solid fa-circle"></i>
+      </div>
       <!-- end of boxes -->
     </header>
     <!-- End of section header -->
